#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

- new development files
  - =Cask=
  - =Makefile=
    - support for =build=, =doc=, =install=, and =test=
      recipes

** Changed

- required =dash= version is now =2.17.0=

* 0.4.0 - 2020-05-09

** Added

- new development files
  - =CHANGELOG.org=