@@ -16,6 +16,7 @@
 ** Changed
 
 - required =dash= version is now =2.17.0=
+- =tests/monitor-tests.el= now uses lexical binding
 
 * 0.4.0 - 2020-05-09
 
